<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.noteform.NoteFormActivity">

    <LinearLayout
        android:id="@+id/ll_switch_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_archive_note"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/text_switch_archive" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_protect_note"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:checked="false"
            android:text="@string/text_switch_using_password" />

        <LinearLayout
            android:id="@+id/ll_card_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/iv_color_preview"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tv_card_color"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:text="@string/text_card_color" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_note_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_field_title_notes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_switch_note">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_note_body"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_field_body_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_note_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_note_body"
            android:gravity="top"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>